fix an issue where resume would overlap the footer

--- a/website/static/styles/resume.css
+++ b/website/static/styles/resume.css
@@ -1,9 +1,9 @@
 .docviewer {
     width: 70em;
-    height: 91.5em;
+    height: 94em;
 }
 
 .resume {
     width: 100%;
-    height: 100%;
+    height: 97%;
 }
